e2e/docker-compose.yml
services:
  httpbin:
    image: mccutchen/go-httpbin:v2.5.0
  envoy:
    depends_on:
      - httpbin
    image: ${ENVOY_IMAGE:-envoyproxy/envoy:v1.23-latest}
    command:
      - -c
      - /conf/envoy-config.yaml
      - --service-cluster # required to export metrics
      - envoy
      - --service-node # required to export metrics
      - envoy
    volumes:
      - ../build:/build
      - ../example:/conf # relying on envoy-config file from /example/
  tests:
    depends_on:
      - envoy
    build:
      context: .
      dockerfile: ./Dockerfile.curl
